Added requirements.txt and relocated pip installations to there
Did you use Linter?
Yes

1. What exactly did you do, explain step by step using an ordered list?

a. Added requirements.txt to zeus.py command
b. Relocated all the pip installations into this file within the virtualenv.

2. Why did you do it? Any comments?
Just by changing requirements.txt you can change the dependencies installed
within the virtualenv and not the vanilla vagrant vm.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,4 @@
-# Put here your Python requirements for pip to install.
+# Requirements to be installed within the standard virtualenv upon startup.
+
+django
+django-widget-tweaks
