--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 **/__pycache__
 **/*.py[cod]
 **/*$py.class
+staticfiles/
 
 # C extensions
 **/*.so
@@ -10,6 +11,7 @@
 # Distribution / packaging
 **/.python/
 **/env/
+.env/
 **/build/
 **/develop-eggs/
 **/dist/
