--- a/php/composer.json
+++ b/php/composer.json
@@ -23,15 +23,13 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src",
-            "Beers\\": "./plugins/Beers/src"
+            "App\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
             "App\\Test\\": "tests",
-            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests",
-            "Beers\\Test\\": "./plugins/Beers/tests"
+            "Cake\\Test\\": "./vendor/cakephp/cakephp/tests"
         }
     },
     "scripts": {
