--- a/rails/Vagrantfile
+++ b/rails/Vagrantfile
@@ -5,10 +5,15 @@ Vagrant.configure("2") do |config|
     # Start with base vagrant box. This one is only 271 MB in size.
     config.vm.box = "minimal/trusty64"
 
+    # Configue the virtual machines resources if you want
+    config.vm.provider :virtualbox do |vb|
+      # vb.cpus = 4 # 4 cpus
+      vb.memory = 768 # minimum memory requirement
+    end
+
     # Create forwarding ports for client-guest machine access via localhost.
     # auto_correct allows the simultaneous spin up of multiple VM locally.
-    config.vm.network :forwarded_port, guest: 80, host: 8080, auto_correct: true
-    config.vm.network :forwarded_port, guest: 5000, host: 5000, auto_correct: true
+    config.vm.network :forwarded_port, guest: 3000, host: 3000, auto_correct: true
 
     # Add the tty fix as mentioned in issue 1673 on vagrant repo
     # To avoid 'stdin is not a tty' messages
