Changed document root in server config

--- a/php/vagrant/000-default.conf
+++ b/php/vagrant/000-default.conf
@@ -1,13 +1,13 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot /vagrant/webroot
+    DocumentRoot /vagrant/www
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     EnableSendfile Off
 
-    <Directory /vagrant>
+    <Directory /vagrant/www>
       	Options FollowSymLinks
       	AllowOverride All
         Require all granted
