Moved env var to server config

--- a/php/vagrant/000-default.conf
+++ b/php/vagrant/000-default.conf
@@ -6,6 +6,8 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     EnableSendfile Off
+		
+		SetEnv DATABASE_URL postgres://vagrant:vagrant@localhost/my_app
 
     <Directory /vagrant/www>
       	Options FollowSymLinks
