--- a/rails/Vagrantfile
+++ b/rails/Vagrantfile
@@ -24,5 +24,6 @@ Vagrant.configure("2") do |config|
     end
 
     # Provision the virtual machine.
-    config.vm.provision :shell, :path => "provision.sh"
+    config.vm.provision "first", type: "shell", privileged: false, :path => "provision.sh"
+    config.vm.provision "second", type: "shell", privileged: false, :path => "provision2.sh"
 end
