--- a/php/vagrant/000-default.conf
+++ b/php/vagrant/000-default.conf
@@ -1,13 +1,15 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot /vagrant/webroot
+    DocumentRoot /vagrant/www
 
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 
     EnableSendfile Off
+		
+		SetEnv DATABASE_URL postgres://vagrant:vagrant@localhost/my_app
 
-    <Directory /vagrant>
+    <Directory /vagrant/www>
       	Options FollowSymLinks
       	AllowOverride All
         Require all granted
