--- a/node/Vagrantfile
+++ b/node/Vagrantfile
@@ -8,6 +8,7 @@ Vagrant.configure("2") do |config|
     # Create forwarding ports for client-guest machine access via localhost.
     config.vm.network :forwarded_port, guest: 80, host: 7331, auto_correct: true
     config.vm.network :forwarded_port, guest: 6000, host: 9331, auto_correct: true
+    config.vm.network :forwarded_port, guest: 3000, host: 9200, auto_correct: true
 
     # Add the tty fix as mentioned in issue 1673 on vagrant repo
     # To avoid 'stdin is not a tty' messages
