--- a/repos.yml
+++ b/repos.yml
@@ -1,11 +1,12 @@
 # Official repos for zenias
 ---
 php:
-  main: https://github.com/mtancoigne/zenias-PHP.git
+  description: PHP for Zenias
+  main: https://github.com/mtancoigne/zenias-box-php.git
   modules:
     cake3:
       description: A CakePHP3-ready box
-      main: https://github.com/mtancoigne/zeus-php-cakephp3.git
+      main: https://github.com/mtancoigne/zenias-box-php-cake3.git
 python:
   description: Python for Zenias
   main: 
