--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,10 @@
-### Python ###
-# Byte-compiled / optimized / DLL files
-**/__pycache__
-**/*.py[cod]
-**/*$py.class
-staticfiles/
+# Python files
+*.pyc
 
-# C extensions
-**/*.so
+# Python Virtualenv
+.python_env/
 
-# Distribution / packaging
-**/.python/
-**/env/
-.env/
-**/build/
-**/develop-eggs/
-**/dist/
-**/downloads/
-**/eggs/
-**/.eggs/
-**/lib/
-**/lib64/
-**/parts/
-**/sdist/
-**/var/
-**/.egg-info/
-**/.installed.cfg/
-
-# PyInstaller
-# Usually these files are written by a python script from a template
-# before PyInstaller builds the exe, so as to
-# inject date/other infos into it.
-**/.manifest/
-**/.spec/
-
-# Installer logs
-**/pip-log.txt
-**/pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-**/htmlcov/
-**/.tox/
-**/.coverage/
-**/.coverage.*
-**/.cache/
-**/nosetests.xml
-**/coverage.xml
-**/.cover/
-**/.hypothesis/
-
-# KDE directory preferences
-**/.directory
-
-### Django ###
-**/*.log
-**/log/
-**/.log/
-**/*.pot
-**/local_settings.py
-**/db.sqlite3
-**/media/
-
-### Vagrant Directory###
-.vagrant/
-**/.vagrant/
-
-### Custom Directories###
-**/.DS_Store/
-**/.idea/
-**/.otto/
-**/myvenv/
+# OS files
+.directory #Dolphin config files
+**/.DS_Store/ # macOS
+**thumbs.db # win thumbs
